[gd_scene load_steps=8 format=4 uid="uid://nf00qn1ot7wc"]

[ext_resource type="Script" uid="uid://bjxg2b5r6l004" path="res://scenes/levels/TavernKitchen/TavernKitchen_intro.gd" id="1_i248c"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_5e2i2"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_jwb1n"]
[ext_resource type="Texture2D" uid="uid://bgsx4yjmah33k" path="res://assets/images/uipack.png" id="4_farta"]
[ext_resource type="Texture2D" uid="uid://brnri3aurwd3p" path="res://assets/images/1bit 16px patterns and tiles.png" id="5_5g43h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4thx2"]
atlas = ExtResource("4_farta")
region = Rect2(234, 396, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pagd2"]
atlas = ExtResource("5_5g43h")
region = Rect2(256, 472, 16, 16)

[node name="TavernKitchenIntro" type="Node2D"]
script = ExtResource("1_i248c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CenterContainer"]
custom_minimum_size = Vector2(432, 48)
layout_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="CanvasLayer/CenterContainer/MarginContainer"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAAAAAAAAAUAAAAAAABAAAAAAAWAAAAAAACAAAAAAAVAAAAAAADAAAAAAAWAAAAAAAEAAAAAAAVAAAAAAAFAAAAAAAWAAAAAAAIAAAAAAAXAAAAAAAHAAAAAAAUAAAAAAAGAAAAAAAXAAAAAAA=")
tile_set = ExtResource("2_5e2i2")

[node name="Hero" parent="CanvasLayer/CenterContainer/MarginContainer" instance=ExtResource("3_jwb1n")]
z_index = 2
position = Vector2(72, 48)
scale = Vector2(3, 3)

[node name="Check" type="Sprite2D" parent="CanvasLayer/CenterContainer/MarginContainer"]
visible = false
position = Vector2(168, -9)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_4thx2")

[node name="Check2" type="Sprite2D" parent="CanvasLayer/CenterContainer/MarginContainer"]
visible = false
position = Vector2(312, -9)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_4thx2")

[node name="Villager2" parent="CanvasLayer/CenterContainer/MarginContainer" instance=ExtResource("3_jwb1n")]
z_index = 1
position = Vector2(168, 48)
scale = Vector2(3, 3)

[node name="Villager3" parent="CanvasLayer/CenterContainer/MarginContainer" instance=ExtResource("3_jwb1n")]
position = Vector2(312, 48)
scale = Vector2(3, 3)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/CenterContainer/MarginContainer"]
modulate = Color(0, 0, 0, 1)
position = Vector2(24, 24)
rotation = 4.71239
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_pagd2")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/CenterContainer/MarginContainer"]
modulate = Color(0, 0, 0, 1)
position = Vector2(416, 24)
rotation = 1.5708
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_pagd2")

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 0.2
